fixed all layout issues

--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -72,7 +72,7 @@ a {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 820px) {
   a {
     font-size: clamp(0.6rem, 1.1vw, 1.2rem);
   }
