--- a/src/assets/css/ImagesLanding.css
+++ b/src/assets/css/ImagesLanding.css
@@ -70,7 +70,7 @@ img {
     bottom: -40%;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 821px) {
   .image-1 > img {
     width: 300px;
     height: 300px;
